[package]
name = "cyb-rune-wasm"
version = "0.0.2"
authors = ["dasein <acidpictures@gmail.com>", "John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.65"
description = "[cyb.ai] A WASM module for the Rune Language, an embeddable dynamic programming language for Rust."
documentation = "https://docs.rs/rune"
readme = "README.md"
homepage = "https://github.com/dasein108/cyb-rune-wasm"
repository = "https://github.com/dasein108/cyb-rune-wasm"
license = "MIT/Apache-2.0"
keywords = ["language", "scripting", "scripting-language", "cyb.ai"]
categories = ["parser-implementations"]


[dependencies]
rune = { version = "0.12.3",  git = "https://github.com/rune-rs/rune.git", branch = "main", package = "rune", features = ["capture-io"] }
rune-macros = { version = "0.12.3",  git = "https://github.com/rune-rs/rune.git", branch = "main", package = "rune-macros" }
rune-modules = { version = "0.12.3",  git = "https://github.com/rune-rs/rune.git", branch = "main", package = "rune-modules", features = ["core", "test", "json", "toml", "rand", "experiments", "http"] }

serde = { version = "1.0.163", features = ["derive"] }
wasm-bindgen = { version = "0.2.85", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.35"
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
js-sys = "0.3.62"
anyhow = "1.0.71"
gloo-utils = "0.1.6"

[dependencies.web-sys]
version = "0.3.62"
features = ["Request", "Response", "Window", "RequestInit", "RequestMode"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
